# Portfolio-Optimization-with-Dynamic-Weights

./: README.md  backtest.py  dataloader.py  demo.ipynb  main.py  optimizer.py  pyproject.toml  var_config.py  visualizations.py
typings/scipy/: __config__.pyi  __init__.pyi
typings/scipy/_lib/: _array_api.pyi  _array_api_override.pyi  _ccallback.pyi  _docscrape.pyi  _pep440.pyi  _sparse.pyi  _testutils.pyi  _util.pyi  deprecation.pyi  doccer.pyi
typings/scipy/constants/: __init__.pyi  _codata.pyi  _constants.pyi  codata.pyi  constants.pyi
typings/scipy/fft/: __init__.pyi  _backend.pyi  _basic.pyi  _basic_backend.pyi  _fftlog.pyi  _fftlog_backend.pyi  _helper.pyi  _realtransforms.pyi  _realtransforms_backend.pyi
typings/scipy/integrate/: __init__.pyi  _bvp.pyi  _cubature.pyi  _lebedev.pyi  _ode.pyi  _odepack_py.pyi  _quad_vec.pyi  _quadpack_py.pyi  _quadrature.pyi  _tanhsinh.pyi  dop.pyi  lsoda.pyi  odepack.pyi  quadpack.pyi
typings/scipy/interpolate/: __init__.pyi  _bary_rational.pyi  _bsplines.pyi  _cubic.pyi  _fitpack2.pyi  _fitpack_impl.pyi  _fitpack_py.pyi  _fitpack_repro.pyi  _interpolate.pyi  _ndbspline.pyi  _ndgriddata.pyi  _pade.pyi  _polyint.pyi  _rbf.pyi  _rbfinterp.pyi  _rbfinterp_np.pyi  _rbfinterp_xp.pyi  _rgi.pyi  fitpack.pyi  fitpack2.pyi  interpnd.pyi  interpolate.pyi  ndgriddata.pyi  polyint.pyi  rbf.pyi
typings/yfinance/: __init__.pyi  base.pyi  cache.pyi  calendars.pyi  config.pyi  const.pyi  data.pyi  exceptions.pyi  live.pyi  lookup.pyi  multi.pyi  pricing_pb2.pyi  search.pyi  shared.pyi  ticker.pyi  tickers.pyi  utils.pyi
(+362 files in other folders)
