[project]
name = "portfolio-optimization-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black[jupyter]>=26.3.1",
    "matplotlib>=3.10.9",
    "mypy>=2.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
    "yfinance>=1.3.0",
]
